# pyzzlix-c

./: .gitignore  Makefile.am  bootstrap  configure.ac
m4/: ac_glfw_devel.m4
src/: Makefile.am  animation.cpp  animation.h  block.cpp  block.h  board.cpp  board.h  color.h  constants.h  event.h  frameset.cpp  frameset.h  grid.h  grid.hpp  image.h  interpolatedvalue.h  interpolatedvalue.hpp  interpolation.cpp  interpolation.h  keymap.cpp  keymap.h  labelmap.h  labelmap.hpp  linkedlist.h  linkedlist.hpp  main.cpp  marker.cpp  marker.h  movebehaviour.cpp  movebehaviour.h  mover.h  mover.hpp  point.h  renderer.cpp  renderer.h  resources.cpp  resources.h  scene.cpp  scene.h  scene_maingame.cpp  (+8 more)
