# Copyright (C) 2009 Anders Andersson <finrist@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_PROGRAMS = pyzzlix
pyzzlix_SOURCES = image.h linkedlist.h linkedlist.hpp main.cpp point.h renderer.cpp renderer.h scene.cpp scene.h scenehandler.cpp scenehandler.h scene_maingame.cpp scene_maingame.h sprite.cpp sprite.h texture.h time.h vector.h board.cpp board.h
